Safari bug fixes
fixed layout issues in the drawer and details card for webkit based
browsers

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -179,16 +179,22 @@ input {
   flex-direction: row;
   align-items: flex-end;
   cursor: pointer;
+  min-height: 120px;
 }
 .mdl-card__media a,
 .mdl-card__title a {
   color: inherit;
 }
 .mdl-card__supporting-text {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   padding: 8px;
   min-height: 64px;
   display: flex;
   align-items: center;
+  -webkit-align-items: center;
 }
 .mdl-card__supporting-text strong {
   font-weight: 400;
@@ -205,8 +211,14 @@ input {
   text-decoration: none;
 }
 .meta > * {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
 }
 .meta > *:first-child {
   margin-right: 8px;
@@ -393,17 +405,28 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bababa', end
 }
 
 .detailed-info-card > .mdl-card__supporting-text {
-  display: flex;
-  flex-direction: column;
-  padding: 32px;
-  overflow: visible;
+	display: flex;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
+	padding: 32px;
+	overflow: visible;
 }
 
 .review {
     display: flex;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
     flex-direction: row;
+	-webkit-flex-direction: row;
     align-self: flex-start;
+    -webkit-align-self: flex-start;
     padding-top: 16px;
 }
 
